syntax = "proto3";

package roominvite;

option go_package = "proto/room_invite";

import "google/protobuf/timestamp.proto";

message RoomInvite {
  int32 id = 1;
  int32 room_id = 2;
  string sender = 3;
  string invite_to = 4;
  bool is_accepted = 5;
  bool is_denied = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateRoomInviteRequest {
  int32 room_id = 1;
  string sender = 2;
  string invite_to = 3;
  bool is_accepted = 4;
  bool is_denied = 5;
}

message CreateRoomInviteResponse {
  RoomInvite invite = 1;
}

message FindRoomInviteByIDRequest {
  int32 id = 1;
}

message FindRoomInviteByIDResponse {
  RoomInvite invite = 1;
}

message FindAllRoomInvitesBySenderRequest {
  string sender = 1;
}

message FindAllRoomInvitesBySenderResponse {
  repeated RoomInvite invites = 1;
}

message FindAllRoomInvitesByInviteToRequest {
  string invite_to = 1;
}

message FindAllRoomInvitesByInviteToResponse {
  repeated RoomInvite invites = 1;
}

message PatchRoomInviteRequest {
  int32 id = 1;
  int32 room_id = 2;
  string sender = 3;
  string invite_to = 4;
  bool is_accepted = 5;
  bool is_denied = 6;
}

message PatchRoomInviteResponse {
  RoomInvite invite = 1;
}

message DeleteRoomInviteRequest {
  int32 id = 1;
}

message DeleteRoomInviteResponse {
  string message = 1;
}

service RoomInviteService {
  rpc CreateRoomInvite(CreateRoomInviteRequest) returns (CreateRoomInviteResponse);
  rpc FindRoomInviteByID(FindRoomInviteByIDRequest) returns (FindRoomInviteByIDResponse);
  rpc FindAllRoomInvitesBySender(FindAllRoomInvitesBySenderRequest) returns (FindAllRoomInvitesBySenderResponse);
  rpc FindAllRoomInvitesByInviteTo(FindAllRoomInvitesByInviteToRequest) returns (FindAllRoomInvitesByInviteToResponse);
  rpc PatchRoomInvite(PatchRoomInviteRequest) returns (PatchRoomInviteResponse);
  rpc DeleteRoomInvite(DeleteRoomInviteRequest) returns (DeleteRoomInviteResponse);
}
